fix: text overflow on build page; start refactoring: ui page; add: new ui sections;

--- a/app/css/config/colors.scss
+++ b/app/css/config/colors.scss
@@ -1,5 +1,15 @@
 // Colors
-$color-primary: #00b763;
+$color-white: #FFFFFF;
+$color-black: #000000;
+$color-primary: #1B74FD;
 $color-secondary: #FD5800;
 
 $color-error: red;
+
+// Gray
+$color-gray-100: #363C4E;
+$color-gray-80: #7C8292;
+$color-gray-60: #C7CBD6;
+$color-gray-40: #DFE3EC;
+$color-gray-20: #F2F4F8;
+$color-gray-10: #F6F9FF;
